[package]
name = "lightyear-avian"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16"
log = { version = "0.4", features = [] }
tracing = { version = "0.1", features = [] }
avian2d = { version = "0.3", features = ["serialize"] }
lightyear = { version = "0.20.2", features = ["udp", "leafwing", "avian2d"] }
serde = { version = "1.0.209", features = ["derive"] }
leafwing-input-manager = { version = "0.17", features = ["ui"] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"
