[package]
name = "lightyear-avian"
version = "0.1.0"
edition = "2024"

[features]
default = ["bevy/dynamic_linking", "avian2d/f32"]

[dependencies]

# avian2d = { version = "0.3", features = ["serialize"] }
avian2d = { path = "../avian/crates/avian2d", features = [
    "serialize",
    "f32",
    "2d",
] }

# lightyear = { version = "0.20.2", features = ["udp", "leafwing", "avian2d"] }
lightyear = { path = "../lightyear/lightyear", features = [
    "udp",
    "leafwing",
    # "avian2d",
] }

bevy = "0.16"
log = { version = "0.4", features = [] }
tracing = { version = "0.1", features = [] }
serde = { version = "1.0.209", features = ["derive"] }
leafwing-input-manager = { version = "0.17", features = ["ui"] }
bevy_egui = { version = "*" }
bevy-inspector-egui = { version = "*" }
bevy_framepace = "*"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dev]
opt-level = 0
strip = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"
